Fix ESLint errors and configure CI=false for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -36,6 +36,7 @@
     }
   ],
   "env": {
-    "REACT_APP_API_URL": "https://financial-dashboard-backend.vercel.app/api"
+    "REACT_APP_API_URL": "https://financial-dashboard-backend.vercel.app/api",
+    "CI": "false"
   }
 }
